fix-wip: working on aligning filters
[#OCD-3117]

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -829,6 +829,10 @@ option[label^="Removed"] {
         text-align: center;
     }
 
+    &.main-axis-align-end {
+        margin-left: auto;
+    }
+
     &.cross-axis-align-end {
         align-self: flex-end;
     }
